Adicionando Diagrama de Blocos

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
     <div class="title">Diagrama de Blocos L1_1_img.py</div>
     <div>
-      <!-- <img src="./img/Diagrama_L1_img.py.png" alt="Diagrama" class="fluxograma"> -->
+      <img src="./img/Diagrama_L1_img.py.png" alt="Diagrama" class="fluxograma">
     </div>
     <div class="section-content">
       Comentario... resultados
