--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <div class="section">
     <h1>WizardsVideo</h1>
-    <p>Danilo Misura de Oliveira          - 11006514</p>
-    <p>Gabriel da Fonseca Nunes           - 11201921456<p>
-    <p>Thiago Vinicius                    - 112017<p>
+    <p>Danilo Misura de Oliveira                    - 11006514</p>
+    <p>Gabriel da Fonseca Nunes                  - 11201921456<p>
+    <p>Thiago Vinícius Pereira Graciano de Souza - 11201722589<p>
   </div>
 
   <div class="section">
