--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
         numérico que define sua cor ou intensidade. Uma matriz de pixels é uma grade bidimensional de pixels que compõem uma imagem ou quadro de vídeo.
       </p>
 
+      <p class="section-content">
+        <b>Filtros</b>: No processamento de imagens, um filtro é uma função matemática que é aplicada a cada pixel de uma imagem.
+        O filtro pode ser usado para melhorar a qualidade da imagem, remover ruído ou adicionar efeitos.
+
+        Alguns exemplos de filtros de processamento de imagens incluem:
+        <ul class="section-content">
+          <li>Filtros de nitidez: esses filtros aumentam o contraste entre os pixels de uma imagem, tornando-a mais nítida. </li>
+          <li>Filtros de suavização: esses filtros reduzem o contraste entre os pixels de uma imagem, tornando-a mais suave. </li>
+          <li>Filtros de ruído: esses filtros removem o ruído de uma imagem, tornando-a mais limpa. </li>
+          <li>Filtros de efeitos: esses filtros adicionam efeitos especiais a uma imagem, como desfoque, vinheta ou preto e branco. </li>
+        </ul>
+      </p>
     </p>
   </div>
 
@@ -128,20 +140,114 @@
     </p class="section-content"> 
 
     <h2 class="section-title">Métodos</h2>
+
     <p class="section-content">
-      ...
+      Nesta primeira parte do trabalho foi desenvolvido o programa que faz a leitura e aplicação do filtro na imagem. 
+      Abaixo segue o programa desenvolvido juntamente com a descrição do seu funcionamento com diagramas de blocos.  
     </p>
     
-    <div class="title">Titulo Imagem</div>
+    <div class="title">L2_filtros.py</div>
     <div class="code-container" id="component-1">
       <textarea readonly>
-        codigo
+import numpy as np
+import cv2 as cv
+import matplotlib.pyplot as plt
+
+def plot_blur(img, save=False):
+    """
+    Plota o original e o filtrado com o filtro Blur.
+
+    Args:
+        img (img): A imagem a ser filtrada.
+        save (bool): Se True, salva a imagem filtrada.
+    """
+    img_blur = cv.blur(img, (3, 3))
+    fig, (ax1, ax2)= plt.subplots(nrows=1, ncols=2)
+    plt.title("Original vs Blur", loc = "center")
+    ax1.imshow(img)
+    ax1.set_title("Original")
+    ax2.imshow(img_blur)
+    ax2.set_title("Blur")
+    if save:
+        plt.savefig("Blur Media.jpg")
+    plt.show()
+
+def plot_gaussian_blur(img, save=False):
+    """
+    Plota o original e o filtrado com o filtro Gaussiano.
+
+    Args:
+        img (img): A imagem a ser filtrada.
+        save (bool): Se True, salva a imagem filtrada.
+    """
+    img_blurg = cv.GaussianBlur(img, (3, 3), 0)
+    fig, (ax1, ax2)= plt.subplots(nrows=1, ncols=2)
+    plt.title("Original vs Blur Fitro Gaussiano", loc = "center")
+    ax1.imshow(img)
+    ax1.set_title("Original")
+    ax2.imshow(img_blurg)
+    ax2.set_title("Blur Fitro Gaussiano")
+    if save:
+        plt.savefig("FiltroGaussiano.jpg")
+    plt.show()
+
+def plot_median_blur(img, save=False):
+    """
+    Plota o original e o filtrado com o filtro Mediano.
+    Args:
+        img (img): A imagem a ser filtrada.
+        save (bool): Se True, salva a imagem filtrada.
+    """
+    img_blurmedian = cv.medianBlur(img, 5)
+    fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2)
+    plt.title("Original vs Blur Fitro Mediano", loc = "center")
+    ax1.imshow(img)
+    ax1.set_title("Original")
+    ax2.imshow(img_blurmedian)
+    ax2.set_title("Blur Fitro Mediano")
+    if save:
+        plt.savefig("FiltroMediano.jpg")
+    plt.show()
+
+def plot_bilateral_filter(img, save=False):
+    """
+    Plota o original e o filtrado com o filtro Bilateral.
+    Args:
+        img (img): A imagem a ser filtrada.
+        save (bool): Se True, salva a imagem filtrada.
+    """
+    img_blurbl = cv.bilateralFilter(img, 9, 75, 75)
+    fig, (ax1, ax2)= plt.subplots(nrows=1, ncols=2)
+    plt.title("Original vs Blur Fitro Bilateral", loc = "center")
+    ax1.imshow(img)
+    ax1.set_title("Original")
+    ax2.imshow(img_blurbl)
+    ax2.set_title("Blur Fitro Bilateral")
+    if save:
+        plt.savefig("Bilateral.jpg")
+    plt.show()
+
+
+# Caminho da Imagem
+path_img = "./Laboratorio2/messi5.jpg"
+
+# Leitura da Imagem
+img = cv.imread(path_img)
+
+# Verificando se a imagem existe
+assert img is not None, "file not could be read"
+
+plot_blur(img, save= True)
+plot_gaussian_blur(img, save= True)
+plot_median_blur(img, save= True)
+plot_bilateral_filter(img, save= True)
+        
       </textarea>
       <button class="copy-button" onclick="copyCode('component-1')">Copiar</button>
     </div>
-    <div class="title">Diagrama de Blocos L1_1_img.py</div>
+    <div class="title">Diagrama de Blocos L1_filtros.py</div>
     <div>
-      <!-- <img src="./img/Diagrama_L1_img.py.png" alt="Diagrama" class="fluxograma"> -->
+      <img src="./img/diagrama_imagem.jpeg" alt="Diagrama" class="fluxograma">
     </div>
     <div class="section-content">
       Comentario... resultados
